# toxicity-from-nowhere-train

./: .gitignore  .gitmodules  AGENTS.md  README.md  pyproject.toml  requirements-uv.txt
artifacts/activations/llavaguard/layer_00/: layer00_shard00000.meta.json  layer00_shard00000.npz
artifacts/activations/llavaguard/siuo_gen/: metadata.json
configs/: eval.yaml  extract.yaml  extract_mdit_triple.yaml  sae_train.yaml  steering.yaml
doc/: DEVELOPMENT.md  USAGE.md
llava/: download_model.py  pipe.sh  requirements.txt
llava/config/: gcav_config.yaml
llava/sae/: sparse_autoencoder.py
llava/steering/: gcav.py
llava/tools/: analyze_results.py  analyze_sae_features.py  extract_deltas.py  intervene_latents.py  select_toxic_latents.py  train_sae.py  visualize_sae_tsne.py
vlm_intrinsic_tox/: __init__.py  config.py
vlm_intrinsic_tox/cli/: eval.py  extract.py  sae_train.py  train_sae.py  visualize.py
vlm_intrinsic_tox/data/: __init__.py  collate.py  datasets.py  mdit.py  mdit_triple.py  memesafety.py  prompts.py  registry.py  siuo.py
vlm_intrinsic_tox/eval/: __init__.py  analyze.py  intervene.py  metrics.py  report.py  steering.py
vlm_intrinsic_tox/extract/: hooks.py  pooling.py  runner.py  sharding.py
vlm_intrinsic_tox/models/: __init__.py  hooks.py  llava_guard.py
vlm_intrinsic_tox/sae/: io.py  modules.py  train.py
vlm_intrinsic_tox/utils/: __init__.py  config.py  env.py  logging.py  paths.py  seed.py  visualization.py
